--- a/src/index.css
+++ b/src/index.css
@@ -213,8 +213,8 @@ code {
   cursor: default;
 }
 
-/* editor field */
 
+/* editor field */
 .editor {
   display: flex;
   flex-direction: column;
@@ -289,6 +289,17 @@ code {
 .output-container {
   height: 85%;
   background-color: rgb(199, 199, 199);
+}
+
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.spinner {
+  height: 20%;
 }
 
 .output-field {
